--- a/.github/workflows/build-apk-localdesktop.yml
+++ b/.github/workflows/build-apk-localdesktop.yml
@@ -101,29 +101,8 @@ jobs:
       #   working-directory: patches/xbuild
       #   run: cargo install --path xbuild
 
-      - name: Build or install xbuild
-        run: |
-          echo "Looking for xbuild source..."
-          
-          # 检查可能的路径
-          POSSIBLE_PATHS=(
-            "${{ github.workspace }}/ci_source/patches/xbuild"
-            "${{ github.workspace }}/ci_source"
-            "${{ github.workspace }}/localdesktop_source/patches/xbuild"
-            "${{ github.workspace }}/localdesktop_source"
-          )
-          for path in "${POSSIBLE_PATHS[@]}"; do
-            if [ -f "$path/Cargo.toml" ]; then
-              echo "Found Cargo.toml at: $path"
-              cd "$path"
-              echo "Building xbuild from $path"
-              cargo install --path .
-              exit 0
-            fi
-          done
-          
-          echo "No xbuild source found, installing from crates.io"
-          cargo install xbuild
+      - name: Build xbuild
+        run: cargo install --path "${{ github.workspace }}/localdesktop_source/patches/xbuild" --package xbuild
 
       - name: Build apk
         run: x build --release --platform=android --arch=arm64 --format=apk
